# memory-market

./: .dockerignore  .gitignore  AGENT_LOOP.md  AGENT_PROMPT.md  BUG_TRACKER.md  CAPTURE_FEATURE.md  CHANGELOG.md  CLI_AUTO_CONFIG.md  CLOUD_DEPLOYMENT_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  IMPLEMENTATION_PLAN.md  INSTALL_CLI_SDK.md  LICENSE  LONG_TASK.md  MEMORY_VERSION_MANAGEMENT.md  MONITORING_README.md  P1.3-implementation.md  P2.1-completion-report.md  P2.4-IMPLEMENTATION-SUMMARY.md  PHASE2_COMPLETION_REPORT.md  QUICKSTART.md  README.en.md  README.md  SDK_CLI_STRUCTURE.md  SDK_CLI_SUMMARY.md  SEMANTIC_SEARCH.md  SEMANTIC_SEARCH_CHANGELOG.md  TEAM_COLLAB_COMPLETION.md  TEST_PLAN.md  VERIFICATION.md  clawhub.json  demo_cli.sh  docker-compose.cache.yml  docker-compose.monitoring.yml  docker-compose.yml  memory_market.db  (+32 more)
.claude-plugin/: plugin.json
alerts/: alerting.yml  alertmanager.yml
api/: index.py
app/: main.py  main_monitoring.py
docs/: API_REFERENCE.md  API_UPDATE_SORTING.md  P1.2-completion-report.md  P1.2-task-summary.md  P2.6-completion-report.md  SCREENSHOTS.md  SEARCH_SORTING_EXAMPLES.md  SEARCH_SORTING_IMPLEMENTATION.md  SEARCH_SORTING_QUICK_REF.md  TRUST_MECHANISM.md  UPGRADE_COMPLETION_REPORT.md  VECTOR_SEARCH_QUICKSTART.md  VECTOR_SEARCH_UPGRADE_SUMMARY.md  advanced-permissions-guide.md  anomaly-detection-guide.md  api-changes-vector-search.md  api-reference.md  audit-log-guide.md  auto-forget-guide.md  benchmark-summary.md  bug-list.md  competitive-analysis-round1.md  competitive-analysis-round2.md  competitive-analysis-round3.md  competitive-analysis-round4.md  competitive-analysis-round5.md  competitive-assessment-v2.md  competitive-assessment.md  compliance-checklist.md  cross-encoder-guide.md  database-schema.md  deployment-team.md  developer-guide-team.md  digital-signature-completion-report.md  digital-signature-guide.md  evaluation-guide.md  (+35 more)
keys/: .master_key  (+1 more)
(+249 files in other folders)
